added get all projects
